# Page-loader

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  linter-check.yml
page_loader/: __init__.py  cli.py  connector.py  content.py  downloader.py  fs.py  http.py  image_loader.py  loader.py  logging.py  name_builder.py  parser.py  resources.py  response_handler.py  saver.py  setup.py  tools.py  url_formatter.py  urlformatter.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_page_loader.py  test_parser.py
tests/fixtures/: input-content.html  www-federalreserve-gov-aboutthefed-contact-us-topics-htm.html  www-morganstanley-com-.html  www-morganstanley-com.html
tests/tmp/: requests-mock-readthedocs-io-en-latest-response-html.html
tmp/: www-goldmansachs-com-our-firm-index-html.html
tmp/www-goldmansachs-com-our-firm-index-html_files/: www-goldmansachs-com-browser-detect-min.js  www-goldmansachs-com-bundle.js  www-goldmansachs-com-carousel-menu.js  www-goldmansachs-com-custom-event-polyfill.js  www-goldmansachs-com-director-min.js  www-goldmansachs-com-elem-dataset-min.js  www-goldmansachs-com-es6-promise-min.js  www-goldmansachs-com-footer.js  www-goldmansachs-com-global.js  www-goldmansachs-com-gs-analytics-init.js  www-goldmansachs-com-gs-analytics.js  www-goldmansachs-com-gs-briefings.js  www-goldmansachs-com-gs-factory-events.js  www-goldmansachs-com-gs-factory-helpers.js  www-goldmansachs-com-gs-free-form.js  www-goldmansachs-com-gs-geo.js  www-goldmansachs-com-gs-hero-tout.js  www-goldmansachs-com-gs-quotefix.js  www-goldmansachs-com-gs-share.js  www-goldmansachs-com-gs-slider.js  www-goldmansachs-com-gsAll.js  www-goldmansachs-com-hammerjs-min.js  www-goldmansachs-com-handlebars-min.js  www-goldmansachs-com-intro-icon.js  www-goldmansachs-com-isomorphic-fetch-min.js  www-goldmansachs-com-nav-analytics.js  www-goldmansachs-com-normalize-wheel-min.js  www-goldmansachs-com-share.js  www-goldmansachs-com-slick-carousel.js  www-goldmansachs-com-slider.js  (+5 more)
(+8 files in other folders)
