[tool.poetry]
name = "hexlet_code"
version = "0.8.7"
description = ""
authors = ["mistermikebell <jokerbell7@gmail.com>"]
packages = [
  { include = "page_loader" },
]
classifiers = [
 "Development Status :: 3 - Alpha",
 "Framework :: Flake8",
 "Intended Audience :: Education",
 "License :: Free For Educational Use",
 "Natural Language :: English",
 "Programming Language :: Python :: 3.8"
]

[tool.poetry.urls]
repository = "https://github.com/mistermikebell/python-project-lvl3"

[tool.poetry.dependencies]
python = "^3.8"
progressbar2 = "^3.53.1"
BeautifulSoup4 = "^4.9.3"
requests-mock = "^1.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
requests = "^2.25.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
